Fixed some spacing issues

--- a/pages/products/style/style.scss
+++ b/pages/products/style/style.scss
@@ -45,7 +45,7 @@ body {
 }
 
 .product:nth-child(2) {
-	width: 55%;
+	width: 58%;
 	.product-description {
 		padding: 2rem 0;
 	}
