--- a/style/style.scss
+++ b/style/style.scss
@@ -66,7 +66,6 @@ nav {
 			list-style-type: disc;
 			color: $green;
 			a {
-				margin: 1rem;
 				color: $green;
 				transition: 0.3s;
 			}
